--- a/favorite-places/index.html
+++ b/favorite-places/index.html
@@ -18,5 +18,6 @@
       <li>Narok</li>
     </ul>
     <p> I developed my interest to visit the above places 10 years ago</p>
+    <p>I would also like to visit United states of America</p>
   </body>
 </html>
